Fix DP conflict lock preservation and exact planner parity